// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS V2/ ButtonV2 Centered 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Default State 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Loading 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      <div
        className="MuiCircularProgress-root-34 MuiCircularProgress-colorPrimary-38 MuiCircularProgress-indeterminate-36"
        role="progressbar"
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-40"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-41 MuiCircularProgress-circleIndeterminate-43"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Main 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Secondary Gray 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 Secondary Line Pink 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS V2/ ButtonV2 State 6 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-root-0 makeStyles-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;
